--- a/manuscript/page-27/body.haml
+++ b/manuscript/page-27/body.haml
@@ -4,5 +4,10 @@
 
 %main.leaf
   .inner.justify
-    %p Keep in mind that sometimes a 10x better product itself isn’t enough. Benchmark’s Sarah Tavel wrote that multi-billion dollar businesses build a 10x better product while also recasting incumbent cost structures. In other words, a better product might not be enough if only the very wealthy will be willing or able to afford the service or convenience. She wrote that “a 10x product and save people money” is the undercurrent running through dozens of breakout companies, including Uber, Airbnb, and WhatsApp.
-    %p Lastly, these kinds of opportunities are rare and hard to pull off, because the incumbent’s network effects often outweigh any product improvements.
+    %ol{ start: "3"} 
+      %li 
+        %p [contd.] Keep in mind that sometimes a 10x better product itself isn’t enough. Benchmark’s Sarah Tavel wrote that multi-billion dollar businesses build a 10x better product while also recasting incumbent cost structures. In other words, a better product might not be enough if only the very wealthy will be willing or able to afford the service or convenience. She wrote that “a 10x product and save people money” is the undercurrent running through dozens of breakout companies, including Uber, Airbnb, and WhatsApp.
+        %p Lastly, these kinds of opportunities are rare and hard to pull off, because the incumbent’s network effects often outweigh any product improvements.
+      %li 
+        %h5 Unique inventory
+        %p Last but not least, a marketplace startup can focus on the supply side, and identify opportunities to bring unique inventory to underserved markets. This strategy certainly helped Airbnb against HomeAway, as well as Etsy vs. eBay.
