--- a/manuscript/page-28/body.haml
+++ b/manuscript/page-28/body.haml
@@ -2,7 +2,7 @@
   .chapter.flex Chapter 1
   .chaptername Introduction to Marketplaces
 
-%main.leaf.flex
+%main.leaf
   .inner.justify
+    %p In some cases, you can even create supply that didn’t exist before. Prior to Airbnb’s success, there wasn’t much incentive for people to post their unused space. Not many people would be comfortable advertising a room in their apartment on Craigslist. Now, Airbnb is a primary source of income, or at least a major supplemental source of income, for a lot of folks.
     %h2.center GO VERTICAL: THE SPAWN OF CRAIGSLIST
-    %img{ src: "https://raw.githubusercontent.com/marvindanig/a-guide-to-marketplaces/master/assets/images/background14.jpg", width: "100%" }/  
