--- a/manuscript/page-30/body.haml
+++ b/manuscript/page-30/body.haml
@@ -4,3 +4,9 @@
 
 %main.leaf.flex
   .inner.justify
+    %h3.center MARKETPLACES AND NETWORK EFFECTS
+    %p One of the main reasons why investors and entrepreneurs love marketplaces is the power of their network effects and how it creates a high degree of defensibility for startups. Keep in mind that “network effects” means more than just a large number of users — network effects kick in when the value of a product depends on how many other users there are.
+    %p When a new user/member is added to the network, it increases the value of the product or service to all other users. This increased value can come in the form of cost reduction (in user acquisition as an example), higher liquidity (in a marketplace), stronger community or deeper relationships (in social networks), etc.
+    %p Generally speaking, network effects are categorized into two types: direct and indirect.
+    %h4 Direct Network Effects
+    %p The simplest network effects are direct: an increase in usage leads to a direct increase in value for all other users. Social sites like Facebook, Twitter, and Wattpad have a direct network effect. If you join Facebook and start sharing content I’m interested in, Facebook becomes more valuable to me.
