--- a/manuscript/page-31/body.haml
+++ b/manuscript/page-31/body.haml
@@ -1,12 +1,11 @@
 %header.tape.flex
+  .chaptername.right Introduction to Marketplaces
   .chapter.flex Chapter 1
-  .chaptername Introduction
+
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p When we think about direct network effects, we consider the roles of the participants. In a marketplace, users are buyers, sellers, or sometimes both. Likewise, in a community or social platform, users can be content creators, content consumers, or both.
+    %p In a marketplace, the roles of a buyer and seller are typically distinct — effectively creating two-sided network effects. When there’s overlap between buyers and sellers, it’s easier to get your network off the ground at the beginning as you’ll achieve liquidity more quickly. For example, in Etsy, Craigslist, and Airbnb, we see some overlap between buyers and sellers (or hosts and guests in Airbnb’s case).
+    %p While overlap helps a marketplace at the beginning, two-sided network effects add to the defensibility of your marketplace over time (since there’s more fragmentation). For example, with Uber, there’s little overlap between drivers and riders.
+    %p We also need to consider how network effects fall on the local-global spectrum:
