--- a/manuscript/page-34/body.haml
+++ b/manuscript/page-34/body.haml
@@ -1,12 +1,13 @@
 %header.tape.flex
   .chapter.flex Chapter 1
-  .chaptername Introduction
+  .chaptername Introduction to Marketplaces
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p Network effects and virality often go hand-in-hand, but not all network effect products are viral, and not all viral products have network effects. For instance:
+    %ul
+      %li Marketplaces often have low virality, even though they have network effects. While you can achieve some virality through incentives, the two-sided network effect does not lend itself to adoption of users on one side to come on-board with invitations/ interactions from the other.
+      %li News outlets, gaming, and communication products can be highly viral products without strong network effects.
+    %p As you build your marketplace, don’t fall into the trap of confusing network effects with virality.
+    %p Marketplaces have low virality, but network effects are critical to scaling and sustaining a marketplace. Think about how users benefit each time someone else participates, and in what way: directly or indirectly. Understanding how network effects impact your startup brings you one step closer to building a more defensible product.
+    
