--- a/manuscript/page-36/body.haml
+++ b/manuscript/page-36/body.haml
@@ -1,12 +1,13 @@
 %header.tape.flex
-  .chapter.flex Chapter 1
-  .chaptername Introduction
+  .chapter.flex Chapter 2
+  .chaptername Seeding, Growing and Scaling a Marketplace
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %h1 SEEDING, GROWING, AND SCALING A MARKETPLACE
+
+    %h4 STAGE 1: SEEDING A MARKETPLACE
+    %p The earliest days in a marketplace are a tricky time. There’s a chicken and egg problem when it comes to supply and demand: customers need supply, and suppliers need customers. But it’s nearly impossible to ramp up supply and demand in lock step.
+    %p We’ve found that in most cases it’s best to focus on building up the supply first. That’s because there’s more incentive for sellers to invest their time in the early days. There’s zero motivation for customers to stick around without any inventory.
+    %p So how do you go about seeding supply? 
+    %p Here are five common strategies:
