--- a/manuscript/page-40/body.haml
+++ b/manuscript/page-40/body.haml
@@ -1,12 +1,13 @@
 %header.tape.flex
-  .chapter.flex Chapter 1
-  .chaptername Introduction
+  .chapter.flex Chapter 2
+  .chaptername Seeding, Growing and Scaling a Marketplace
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %ol{ start: "4"}
+      %li
+        %p Buying inventory artificially creates supply, improving the way the marketplace works at the outset. It’s an easy way to get inventory in the early stage, but it’s not scalable as it obviously gets expensive to both buy and manage inventory yourself.
+      %li
+        %h6 Aggregate readily accessible inventory
+        %p The last strategy is to aggregate inventory that’s already listed somewhere, for example through affiliate programs. This approach will provide the initial scale that you’re looking for, but there are several key drawbacks. First, while you may have a lot of inventory, none of it will be unique: why should buyers come to your site instead of the other sites you’re pulling inventory from?
+        %p The second problem is that when you aggregate existing inventory, you run the risk of becoming a cross-platform utility rather than your own marketplace with lots of highly engaged users. 
