--- a/manuscript/page-41/body.haml
+++ b/manuscript/page-41/body.haml
@@ -1,12 +1,13 @@
 %header.tape.flex
-  .chapter.flex Chapter 1
-  .chaptername Introduction
+  .chaptername.right Seeding, Growing and Scaling a Marketplace
+  .chapter.flex Chapter 2
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %ol{ start: "4"}
+      %li
+        %p Fred Wilson discusses this issue with regard to networks, but his words are equally relevant to marketplaces:
+          %blockquote
+            %em If the initial utility of an app is to connect to a bunch of networks, collect information, present it, and then let the user engage with one or more of those networks, what incentive is there for the user to engage directly with other users of the app and help build a network inside of it?
+        %p With that said, aggregating existing inventory can be an effective way to kick-start your marketplace early on. That’s what our portfolio company Dwellable did before quickly transitioning to their own inventory. 
+        %p No matter which approach you use, it’s easier to build a strong community if there’s a large overlap between buyers and sellers. For example, think about the number of Airbnb hosts who stay with other hosts during their own travels. Likewise, sellers on Etsy also make purchases since they appreciate handcrafted goods. Peer-to-peer marketplaces are more likely to have sellers that double as customers and vice-versa.
