--- a/manuscript/page-43/body.haml
+++ b/manuscript/page-43/body.haml
@@ -1,12 +1,11 @@
 %header.tape.flex
-  .chapter.flex Chapter 1
-  .chaptername Introduction
+  .chaptername.right Seeding, Growing and Scaling a Marketplace
+  .chapter.flex Chapter 2
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %h3 STAGE 2: GROWING A MARKETPLACE… HOW TO SPARK THE VIRTUOUS CYCLE
+    %p The virtuous cycle is the holy grail for online marketplaces. In this positive feedback loop, a high number of quality suppliers attract more customers; then more customers attract more suppliers to join. This cycle continues as a self-sustaining growth engine until both supply and demand reach critical mass to be “winner takes all.”
+    %p But how does a marketplace create the momentum for a virtuous cycle in the first place?
+    %h4 Identify and double down on the hot spots
+    %p One of the most important things you can do is identify and double down on the things that work in your marketplace. As you start scaling, there will be many matches and transactions between buyers and sellers. But not all matches are created equal. Identify where things are clicking on both the supply and demand side. This could be in certain geographies, audience segments, price points, and user behavior.
