--- a/manuscript/page-44/body.haml
+++ b/manuscript/page-44/body.haml
@@ -1,12 +1,15 @@
 %header.tape.flex
-  .chapter.flex Chapter 1
-  .chaptername Introduction
+  .chapter.flex Chapter 2
+  .chaptername Seeding, Growing and Scaling a Marketplace
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p 
+      Then you’ll want to double down on these hot spots, often following Paul Graham’s advice to 
+      %a{href: "http://paulgraham.com/ds.html"} do things that don’t scale.&nbsp; 
+      Don’t worry that the absolute numbers hardly seem worth the effort. At this point you’re just trying to get the virtuous cycle going. If the market exists, you can recruit your suppliers and customers manually, then switch over to less manual (more scalable) methods.
+    %blockquote 
+      %em At some point, there was a very noticeable change in how Stripe felt. It tipped from being this boulder we had to push to being a train car that in fact had its own momentum.
+    .right — Patrick Collison, Stripe
+    .clearfix
+    %p Airbnb is a classic example. Founders Brian Chesky, Nathan Blecharczyk, and Joe Gebbia frequently traveled to NYC to acquire their early users. Then when they realized that high quality listing photos were key to attracting customers (and differentiating the experience from Craigslist), they rented a $5,000 camera and went door to door, taking professional pictures of as many New York listings as possible. This approach led to two to three times as many bookings on their New York listings.
