--- a/manuscript/page-46/body.haml
+++ b/manuscript/page-46/body.haml
@@ -1,12 +1,14 @@
 %header.tape.flex
-  .chapter.flex Chapter 1
-  .chaptername Introduction
+  .chapter.flex Chapter 2
+  .chaptername Seeding, Growing and Scaling a Marketplace
 
-%main.leaf.flex
+%main.leaf
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p This means that founders need to believe in their idea even when no one else does. But that doesn’t mean turning a blind eye to the market. You’ve got to continually look for small signals that you’re on the right track – such as increased word of mouth from early adopters, increased repeat usage from buyers, increased listings from sellers, and positive user feedback.
+    %p Just as important, investors need to stay patient: no two-sided marketplace is built overnight.
+    %h3 STAGE 3: SCALING A MARKETPLACE
+    %p As a marketplace figures out how to bring buyers and sellers together and builds liquidity, the virtuous cycle starts kicking in. Growth quickly accelerates. The ultimate goal is that a successful startup grows into a big company. But as you begin to scale, you’ll need new strategies to keep the forward progress going. 
+
+    %h3 1. Foster trust and safety
+    %p 
+      A certain level of trust is required for any transaction to take place. During the early days of your marketplace, you may have a small and passionate community. As such, trust and safety are not significant concerns. 
