--- a/manuscript/page-47/body.haml
+++ b/manuscript/page-47/body.haml
@@ -1,12 +1,15 @@
 %header.tape.flex
-  .chapter.flex Chapter 1
-  .chaptername Introduction
+  .chaptername.right Seeding, Growing and Scaling a Marketplace
+  .chapter.flex Chapter 2
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p However, as a marketplace grows and gains popularity, it will inevitably attract some bad actors. As one 
+      %a{ href: "http://techcrunch.com/2008/08/11/airbed-and-breakfast-takes-pad-crashing-to-a-whole-new-level/"} 
+        &nbsp;TechCrunch commenter&nbsp; 
+      wrote back in 2008, responding to an article on Airbnb:
+
+    %blockquote 
+      %em If this ever becomes mainstream, the whole thing will come crashing down. The kind of people that *DO* rob, abuse, rape and murder people will start using these systems, and that will spread legitimate fear, corrupting the whole thing. Pray that this remains underground, that’s the only way it can survive.
+    %p Your job as a marketplace is to fight these bad actors proactively, so both buyers and sellers have confidence in the platform.
+    %p Transparency is one of the most effective ways to establish trust and credibility. This can be done with a rating system, user reviews, or testimonials. Some platforms act on this data to weed out the bad users (both buyers or sellers). For example, you’ll never see an Uber driver with a rating lower than three stars. Uber filters these drivers out, so customers don’t have to sift through driver reviews before getting a ride. On the flip side, riders are also rated, so drivers can feel safe with their pickups too.
