--- a/templates/style.scss
+++ b/templates/style.scss
@@ -213,3 +213,14 @@ blockquote:after {
     margin-left: 0.5vw;
     vertical-align: -0.9vw;
 }
+
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0;
+}
+* html .clearfix             { zoom: 1; } /* IE6 */
+*:first-child+html .clearfix { zoom: 1; } /* IE7 */
