--- a/manuscript/page-32/body.haml
+++ b/manuscript/page-32/body.haml
@@ -1,12 +1,10 @@
 %header.tape.flex
   .chapter.flex Chapter 1
-  .chaptername Introduction
+  .chaptername Introduction to Marketplaces
 
-%main.leaf.flex
+%main.leaf
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %ul
+      %li Local network effects: The value-add of a product may not increase with the overall size of its user base, but is dependent on the size of a smaller subset. In this case, a user’s experience might be influenced directly by the number of people and actions of a small subset of users (i.e. connections through the user’s personal/professional network or neighborhood). We see local network effects at play with instant messaging, social networks, and the on-demand economy.
+      %li Global network effects: These take place with a larger-sized network with few barriers in payment or language. We see global network effects on a global marketplace like eBay. Keep in mind that some marketplaces, like Etsy, will fall between local and global network effects, as there can be shipping and language limitations.
+
