--- a/manuscript/page-33/body.haml
+++ b/manuscript/page-33/body.haml
@@ -1,12 +1,13 @@
 %header.tape.flex
+  .chaptername.right Introduction to Marketplaces
   .chapter.flex Chapter 1
-  .chaptername Introduction
+
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %h4 Indirect Network Effects
+    %p Network effects can also be indirect. In these cases, when more people use a product or network, it sparks the production of complementary products and goods — thus increasing the value of the original product. A common example is with hardware and software: the more people that use a hardware product, the more likely it is that developers will build software and apps for that hardware.
+    %p Indirect network effects can also apply to marketplaces. Developers often build applications and products on top of APIs of existing marketplaces and platforms. For example, Shopify has a very active developer/value-add app ecosystem. In addition, countless services sprout up to support popular platforms — like Airbnb management services (Guestly) and driver rental car options for Uber/Lyft (Drover).
+
+    %h4 How do network effects differ from virality? 
+    %p When information can be shared rapidly and widely from one user to another, or when the rate of adoption increases with adoption, we have virality. In other words, the product grows faster as more users adopt it (to a certain limit).
