--- a/manuscript/page-35/body.haml
+++ b/manuscript/page-35/body.haml
@@ -1,12 +1,10 @@
 %header.tape.flex
+  .chaptername.right Introduction to Marketplaces
   .chapter.flex Chapter 1
-  .chaptername Introduction
 
-%main.leaf.flex
+%main.leaf
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p
+      In addition, we can’t underestimate the importance of data network effects to the success of a marketplace. Tophatter (a mobile e-commerce marketplace with no prior data infrastructure or data background) has been refining its marketplace by making decisions about what products go into the marketplace (e.g. seller-side analytics to determine which items and sellers are good). Their goal is to build a personalized marketplace for each buyer. They built the right data infrastructure to generate and evaluate personalized recommendations for users on the platform.
+    %p
+      The result has been a 30% increase in clicks. The company is expecting to make $100 million in revenue in 2017 (compared with nearly $40 million in 2016). Much of this growth is due to how data-driven the company is, especially when it comes to recommendations.
