--- a/manuscript/page-37/body.haml
+++ b/manuscript/page-37/body.haml
@@ -1,12 +1,15 @@
 %header.tape.flex
-  .chapter.flex Chapter 1
-  .chaptername Introduction
+  .chaptername.right Seeding, Growing and Scaling a Marketplace
+  .chapter.flex Chapter 2
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %ol
+      %li
+        %h6 Identify unique inventory
+        %p One of the best types of suppliers to target are those people who don’t already sell online. For example, Etsy went after the producers of hand-made goods. These designers and crafters found their unique goods buried within eBay’s massive inventory and typically resorted to selling their items locally at craft shows, farmers’ markets, etc. Etsy came along and brought these local experiences online.
+        %p The advantage of focusing on unique inventory is that it won’t take much effort to persuade providers to join once they’re made aware of your site. In addition, these types of sellers will typically bring along some of their own buyers – helping you ramp up your customer base at the same time.
+      %li
+        %h6 Convince existing sellers to list on your platform
+        %p If your ideal suppliers already have an online outlet, you’ll need to be creative and exert more energy to convince them to join your young marketplace. Airbnb is a classic example.
+    .right [contd.]
