--- a/manuscript/page-38/body.haml
+++ b/manuscript/page-38/body.haml
@@ -1,12 +1,14 @@
 %header.tape.flex
-  .chapter.flex Chapter 1
-  .chaptername Introduction
+  .chapter.flex Chapter 2
+  .chaptername Seeding, Growing and Scaling a Marketplace
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %ol{ start: "2"}
+      %li
+        %p [contd.] Airbnb’s target customers and suppliers were using Craigslist to buy and sell lodging outside of the standard hotel experience. Airbnb offered a more personal and trustworthy experience than the free-for-all on Craigslist, but Craigslist had one thing Airbnb didn’t: a massive user base and inventory.
+        %p As detailed in a Growth Hackers case study, Airbnb found some interesting ways to leverage the existing supply on Craigslist, including emailing Craigslist listers and encouraging them to check out Airbnb. While one could argue this approach was pretty close to spam, it most likely enabled Airbnb to cheaply reach tens of thousands of their targeted suppliers each day.
+      %li
+        %h6 Bring customers to a provider
+        %p With service marketplaces, one of the easiest ways to build early liquidity is to approach a provider with a customer opportunity already in hand. A ready-to-go, paying customer is always much more compelling than talk about future potential.
+        
