--- a/manuscript/page-42/body.haml
+++ b/manuscript/page-42/body.haml
@@ -1,12 +1,7 @@
 %header.tape.flex
-  .chapter.flex Chapter 1
-  .chaptername Introduction
+  .chapter.flex Chapter 2
+  .chaptername Seeding, Growing and Scaling a Marketplace
 
-%main.leaf.flex
+%main.leaf
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p The bottom line is this: if you are building a marketplace, you need to devise an effective strategy for ramping up supply. The next stage is getting to that virtuous cycle of supply and demand.
