--- a/manuscript/page-45/body.haml
+++ b/manuscript/page-45/body.haml
@@ -1,12 +1,13 @@
 %header.tape.flex
-  .chapter.flex Chapter 1
-  .chaptername Introduction
+  .chaptername.right Seeding, Growing and Scaling a Marketplace
+  .chapter.flex Chapter 2
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %blockquote
+      %em When New York took off, we flew back every weekend. We went door to door with cameras taking pictures of all these apartments to put them online. I lived in their living rooms. And home by home, block by block, communities started growing. And people would visit New York and bring the idea back with them to their city.
+    .right – Brian Chesky, for The Atlantic
+    .clearfix
+    %h4  Be Patient: marketplaces take time
+    %p With a typical SaaS or e-commerce startup, you probably should reassess your market or model if you don’t see signs of traction after six to nine months. However, this timetable is way too accelerated for marketplaces. Considering you need to establish both buyer and seller communities, you will need more time to prove your business. It can take three years for a marketplace to get going.
+    %p Looking at a Version One portfolio company, the crowdfunding platform Indiegogo was founded in 2007, but its breakout year didn’t come until four years later.
