--- a/manuscript/page-48/body.haml
+++ b/manuscript/page-48/body.haml
@@ -1,12 +1,7 @@
 %header.tape.flex
-  .chapter.flex Chapter 1
-  .chaptername Introduction
+  .chapter.flex Chapter 2
+  .chaptername Seeding, Growing and Scaling a Marketplace
 
-%main.leaf.flex
+%main.leaf
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p Providing some level of guarantee — be it for service quality, delivery time, or payment — is critical for instilling trust on both sides. If your marketing claims you’ll be at your customer’s doorstep in 15 minutes, you need to make sure you can deliver on that promise. If a buyer never receives their item, you’ll need to be ready with a money-back guarantee. And, whenever the terms of the transaction are broken (on either side), you need to follow up with a very personal response.
